<resources>
    <string name="app_name">Android Academy</string>


    <string name="task">Task</string>
    <string name="try_me">Try Me!!!</string>
    <string name="answers">Answers</string>

    <!--/*Main View Fragment-->
    <string name="appName">Android Academy</string>
    <string name="getting_started">Getting Started</string>
    <string name="lesson1">Lesson 1: User Interface</string>
    <string name="lesson2">Lesson 2: Input Controls</string>
    <string name="lesson3">Lesson 3: Switching Pages</string>
    <string name="lesson4">Lesson 4: Fragments</string>
    <string name="test">Test your skills</string>
    <string name="back">Back</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Getting Started Activity-->
    <string name="android_terms">Android Terms</string>
    <string name="create_project">Create Project</string>
    <string name="android_manifest">Android Manifest</string>
    <string name="android_emulator">Android Emulator</string>
    <string name="title_activity_create_project">Create New Project </string>
    <string name="createProject1">1. Start a new android project</string>
    <string name="createProject2">2. Use the following data for your project</string>
    <string name="createProject3">3. Select target android device</string>
    <string name="createProject4">4. Add an activity to mobile. Select empty activity.</string>
    <string name="createProject5">5. Customize the Activity. Uncheck Backwards Compatibility and click finish.</string>
    <string name="createProject6">6. Congratulations! You have created your first project!</string>
    <string name="setting_up_android_emulator">Setting up Android Emulator</string>
    <string name="before_you_start">Before you start:</string>
    <string name="avd_manager">An Android Virtual Device (AVD) is a configuration that defines the characteristics of an Android phone, tablet, Android Wear, or Android TV device that you want to simulate in the Android Emulator.</string>
    <string name="action_settings">Settings</string>
    <string name="getting_started_task">1: Create a new project called MyAndroidTasks</string>
    <string name="getting_started_task2">2: Change the \"Hello World\" in TextView to \"This is my first task!\"</string>

    <!--Lesson 1 Activity-->
    <string name="intro_layouts">Introduction to Layouts</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="list_view">List View</string>
    <string name="grid_view">Grid View</string>
    <string name="widgets">Widgets</string>

    <!--Lesson 2 Input Controls-->
    <string name="button">Button</string>
    <string name="checkboxes">Checkboxes</string>
    <string name="radio_buttons">Radio Buttons</string>
    <string name="toggle_buttons">Toggle Buttons</string>
    <string name="spinners">Spinners</string>
    <string name="pickers">Pickers</string>

    <!--Lesson 3 Android Manifest-->
    <string name="introManifest1">What is Android Manifest?\nIt is a file that provides essential information about your app on the Android System. The system requires these information before it can run any of the app\'s code. These are the following information presented in Android Manifest:</string>
    <string name="introManifest2">It names the Java package for the application, which serves as a unique identifier for the application.</string>
    <string name="introManifest3">It names the classes and their components. These declarations inform the Android system of the components and the conditions in which they can be launched.</string>
    <string name="introManifest4">It determines the processes that host the application components. </string>
    <string name="introManifest5">It declares the permissions that the application must have to:\n- access protected parts of the API\n-interact with other apps.\n- interact with the application\'s components.</string>
    <string name="introManifest6">It lists the Instrumentation classes which are present in the manifest only while the application is being developed and are removed before the application is published. </string>
    <string name="introManifest7">It declares the minimum level of the Android API that the application requires.</string>
    <string name="introManifest8">It lists the libraries that the application must be linked against.</string>
    <string name="introManifest9">This is an example of Android Manifest:</string>
    <string name="title_activity_lesson1_task">Lesson1TaskActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!--Lesson 4 Android Widgets-->
    <string name="widgetText1">What are Widgets?\nThe Widget package contains mostly visual User-Interface elements that you can use on our Application Screen. In Android Studios, there are pre-included widgets that you are able to use in the .xml files, such as TextView, Buttons, and many more.</string>
    <string name="widgetText2">The list of widgets provided by android studios can be found when an XML file is created.\nXML files can usually be found under the res/layout/ folder in Android Studios.</string>
    <string name="widgetText3">Now click the design tab, and see that the textView no longer shows "HelloWorld!", but your new string!</string>
    <string name="widgetText4">You should see a preview of what the app looks on an android device once the app is run\nWe can find the available widgets on the top left of the edit panel</string>
    <string name="widgetText5">Click and drag the bottom left corner of the widget list to get a clearer view of the widgets.\nTo use a widget, simply click and drag the widget onto the screen display.</string>
    <string name="widgetText6">Click the text tab to look at the codes. Notice that a new section of codes has been added.\nDragging the widget on the Design view generates a new set of default codes automatically.\nWe can edit the position, size and words on the widget by editing these codes.</string>
    <string name="widgetText7">Let\'s try to edit the words shown through the TextView widget.\nFirst, open the Strings library in Res/Values/Strings.\nYou should be able to see a line of code in the Strings.xml file.</string>
    <string name="widgetText8">A String refers to a line of words.\nEach line of code consists of 2 pieces of information: The name of the string that points the program to the string, and the string itself.\nIn the example above, the red box is where the name of the string is, and the blue box is the actual string.</string>


    <!--Android Emulator-->
    <string name="emulatorText1">Download and Run Intel HAXM Emulator Installer</string>
    <string name="emulatorText2">To open AVD Manager, go to Tools > Android > AVD Manager</string>
    <string name="emulatorText3">Click Create Virtual Device, at the bottom of the AVD Manager dialog.</string>
    <string name="emulatorText4">Select either O or Nougat under the Recommended tab. If you see Download next to the system image, you need to download the system image.</string>
    <string name="emulatorText5">Congratulations! You have created a virtual Android device!</string>
    <string name="emulatorText6">Try running the Hello World project using the emulator we have created.</string>
    <string name="emulatorText7">Click on the play button to run the app</string>
    <string name="emulatorText8">Select the AVD we created</string>
    <string name="emulatorText9">Congratulations! You have succesfully run your first Android app!</string>


    <!--Linear Layout Fragment-->
    <string name="linearLayoutText1">Using vertical linear layout</string>
    <string name="linearLayoutText2">For this exercise, we will be using the Hello World project we created.</string>
    <string name="linearLayoutText3">Your activity_main.xml should look something like this.\n(it\'s okay if it\'s not)</string>
    <string name="linearLayoutText4">Change ConstraintLayout to LinearLayout. Delete those striked out in red.</string>
    <string name="linearLayoutText5">It is important to take note of the orientation in LinearLayout. To set the orientation, use android:orientation. For this exercise, we shall set orientation to vertical.</string>
    <string name="linearLayoutText6">You should see something like this:</string>
    <string name="linearLayoutText7">Using horizontal linear layout</string>
    <string name="linearLayoutText8">Change the layout from vertical to horizontal</string>

    <!--Lesson1 Fragment-->
    <string name="lesson1text1">My Android Academy App</string>
    <string name="lesson1text2">Name</string>
    <string name="lesson1text3">Enter name</string>
    <string name="lesson1text4">1. Use LinearLayout (or any layouts you prefer)</string>
    <string name="lesson1text5">2. Drag and drop a TextView into the layout</string>
    <string name="lesson1text6">2.1 Change the text to \'My Android Academy App\'</string>
    <string name="lesson1text7">2.2 Size of the text: 30sp</string>
    <string name="lesson1text8">2.3 Text Colour: @color/colorPrimary</string>
    <string name="lesson1text9">3. Drag and drop a TextView into the layout</string>
    <string name="lesson1text10">3.1 Change the text to \'Name\'</string>
    <string name="lesson1text11">3.2 Size of the text: 24sp</string>
    <string name="lesson1text12">3.3 Text Colour: #000000 (black)</string>
    <string name="lesson1text13">4. Drag and drop EditText into the layout</string>
    <string name="lesson1text14">4.1 Edit hint to \'Enter name\'</string>
    <string name="lesson1text15">4.2 Size of the text: 18sp</string>
    <string name="lesson1text16">4.3 Text Colour: #FF0000 (red)</string>
    <string name="lesson1text17">5. Drag and drop a Button into the layout</string>
    <string name="lesson1text18">5.1 Edit text to \'Enter\'</string>
    <string name="lesson1text19">6. Play around with margin and padding to make your app look like the app in the Example page</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
