<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yxsoong.project.androidacademy.Lesson1TaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="serif"
            android:layout_marginBottom="10dp"
            android:text="@string/lesson1text4"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="serif"
            android:layout_marginBottom="10dp"
            android:text="@string/lesson1text5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:paddingLeft="15dp"
            android:fontFamily="serif"
            android:layout_marginBottom="10dp"
            android:text="@string/lesson1text6"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:paddingLeft="15dp"
            android:fontFamily="serif"
            android:layout_marginBottom="10dp"
            android:text="@string/lesson1text7"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="serif"
            android:paddingLeft="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/lesson1text8"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="serif"
            android:layout_marginBottom="10dp"
            android:text="@string/lesson1text9"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:paddingLeft="15dp"
            android:fontFamily="serif"
            android:layout_marginBottom="10dp"
            android:text="@string/lesson1text10"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:paddingLeft="15dp"
            android:fontFamily="serif"
            android:layout_marginBottom="10dp"
            android:text="@string/lesson1text11"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="serif"
            android:paddingLeft="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/lesson1text12"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="serif"
            android:layout_marginBottom="10dp"
            android:text="@string/lesson1text13"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:paddingLeft="15dp"
            android:fontFamily="serif"
            android:layout_marginBottom="10dp"
            android:text="@string/lesson1text14"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:paddingLeft="15dp"
            android:fontFamily="serif"
            android:layout_marginBottom="10dp"
            android:text="@string/lesson1text15"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="serif"
            android:paddingLeft="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/lesson1text16"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="serif"
            android:layout_marginBottom="10dp"
            android:text="@string/lesson1text17"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:paddingLeft="15dp"
            android:fontFamily="serif"
            android:layout_marginBottom="10dp"
            android:text="@string/lesson1text18"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="serif"
            android:layout_marginBottom="10dp"
            android:text="@string/lesson1text19"/>
    </LinearLayout>




</ScrollView>