<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yxsoong.project.androidacademy.AndroidManifestTab1">

    <!-- TODO: Update blank fragment layout -->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:src="@drawable/android_robot_question_mark" />

        <TextView
            android:id="@+id/manifestIntro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_weight="3"
            android:text="@string/introManifest1"
            android:textSize="20sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/manifestIntro2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/introManifest2" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/manifestIntro3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/introManifest3" />

    </TableRow>

</TableLayout>
