<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yxsoong.project.androidacademy.LinearLayoutTab3">

    <TextView
        android:id="@+id/pageNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center"
        android:text="3 of 3"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:textColor="@color/black"
        android:textSize="@dimen/page_text_size"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/pageNumber"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linearLayoutText7"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="serif"
            android:textSize="22sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linearLayoutText8"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <com.github.chrisbanes.photoview.PhotoView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitStart"
            android:src="@drawable/linearlayoutlesson5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="serif"
            android:text="@string/linearLayoutText6"/>

        <com.github.chrisbanes.photoview.PhotoView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/linearlayoutlesson6" />

    </LinearLayout>

</RelativeLayout>
